# misc

./: .travis.yml  Cargo.toml  README.md
benches/: slog.rs
examples/: alternative_names.rs  colors.rs  duplicate.rs  expressions.rs  features.rs  file-line-module.rs  global_file_logger.rs  oldlogging.rs  pushlazy.rs  term-compact.rs  term-full.rs  thread-local-closure.rs
