[package]
name = "slog-misc"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[dependencies]
slog = { git = "https://github.com/slog-rs/slog", branch="2.x.y" }
slog-json = { git = "https://github.com/slog-rs/json", branch="2.x.y" }
#slog-stream = { git = "https://github.com/slog-rs/stream", branch="2.x.y" }
slog-serde = { git = "https://github.com/slog-rs/serde", branch="2.x.y" }
#slog-term = { git = "https://github.com/slog-rs/term", branch="2.x.y" }
#slog-scope = "*"
#slog-scope-stdlog = "*"
#slog-syslog = "1.0.0-alpha9"
#slog-bunyan= "*"
#slog-atomic= "*"
slog-std = { path= "../std" }
#slog-stdlog = "*"
#slog-envlogger = "*"

#log = "0.3.6"
#lazy_static = "0.1.16"
#nix = "0.6.0"

[replace]
"slog:2.0.0-alpha1" = { git = "https://github.com/slog-rs/slog", branch="2.x.y" }
"slog-stream:2.0.0-alpha1" = { git = "https://github.com/slog-rs/stream", branch="2.x.y" }
"slog-term:2.0.0-alpha1" = { git = "https://github.com/slog-rs/term", branch="2.x.y" }
"slog-extra:0.2.0-alpha1" = { git = "https://github.com/slog-rs/extra", branch="2.x.y" }
"slog-serde:1.0.0-alpha1" = { git = "https://github.com/slog-rs/serde", branch="2.x.y" }
"slog-json:2.0.0-alpha1" = { git = "https://github.com/slog-rs/json", branch="2.x.y" }
"slog-stdlog:1.1.0" = { git = "https://github.com/slog-rs/stdlog" }
"slog-bunyan:1.1.1" = { git = "https://github.com/slog-rs/bunyan" }
"slog-envlogger:0.5.0" = { git = "https://github.com/slog-rs/envlogger" }
"slog-atomic:0.4.3" = { git = "https://github.com/slog-rs/atomic" }
"slog-scope:0.2.2" = { git = "https://github.com/slog-rs/scope" }
"slog-scope-stdlog:0.2.0" = { git = "https://github.com/slog-rs/scope-stdlog" }
"slog-syslog:1.0.0-alpha9" = { git = "https://github.com/slog-rs/syslog" }
