[package]
name = "slog-misc"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

[profile.release]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[dependencies]
slog = { git = "https://github.com/slog-rs/slog" }
slog-async = { git = "https://github.com/slog-rs/async" }
slog-json = { git = "https://github.com/slog-rs/json" }
slog-term = { git = "https://github.com/slog-rs/term" }
slog-scope = { git = "https://github.com/slog-rs/scope" }
slog-bunyan = { git = "https://github.com/slog-rs/bunyan" }
slog-atomic = { git = "https://github.com/slog-rs/atomic" }
slog-stdlog = { git = "https://github.com/slog-rs/stdlog" }
slog-syslog = { git = "https://github.com/slog-rs/syslog" }

#slog-envlogger = "*"

#log = "0.3.6"
#lazy_static = "0.1.16"
#nix = "0.6.0"

#[replace]
#"slog:2.0.0-alpha1" = { git = "https://github.com/slog-rs/slog" }
#"slog-json:2.0.0-alpha1" = { git = "https://github.com/slog-rs/json" }
#"slog-async:2.0.0-alpha1" = { git = "https://github.com/slog-rs/async" }

#"slog-term:2.0.0-alpha1" = { git = "https://github.com/slog-rs/term", branch="2.x.y" }
#"slog-extra:0.2.0-alpha1" = { git = "https://github.com/slog-rs/extra", branch="2.x.y" }
#"slog-stdlog:1.1.0" = { git = "https://github.com/slog-rs/stdlog" }
#"slog-bunyan:1.1.1" = { git = "https://github.com/slog-rs/bunyan" }
#"slog-envlogger:0.5.0" = { git = "https://github.com/slog-rs/envlogger" }
#"slog-atomic:0.4.3" = { git = "https://github.com/slog-rs/atomic" }
#"slog-scope:0.2.2" = { git = "https://github.com/slog-rs/scope" }
#"slog-scope-stdlog:0.2.0" = { git = "https://github.com/slog-rs/scope-stdlog" }
#"slog-syslog:1.0.0-alpha9" = { git = "https://github.com/slog-rs/syslog" }
