[package]
name = "slog-misc"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]

[profile.release]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[dependencies]
slog = { git = "https://github.com/slog-rs/slog" }
slog-async = { git = "https://github.com/slog-rs/async" }
slog-json = { git = "https://github.com/slog-rs/json" }
slog-term = { git = "https://github.com/slog-rs/term" }
slog-scope = { git = "https://github.com/slog-rs/scope" }
slog-bunyan = { git = "https://github.com/slog-rs/bunyan" }
slog-atomic = { git = "https://github.com/slog-rs/atomic" }
slog-stdlog = { git = "https://github.com/slog-rs/stdlog" }
slog-syslog = { git = "https://github.com/slog-rs/syslog" }
log = "0.3.8"

[replace]
"slog:2.0.6" = { git = "https://github.com/slog-rs/slog" }
"slog-scope:4.0.0" = { git = "https://github.com/slog-rs/scope" }
